--- a/index.html
+++ b/index.html
@@ -170,7 +170,25 @@ The results show that topically similar clusters (here: clusters containing temp
             <iframe allow="autoplay; fullscreen" height="282" width="500" src="https://estream.lancaster.ac.uk/Embed.aspx?id=67913&amp;code=e9~g5OZF3y0OZzlMDlza5Eks5NFkYgpFb" frameborder="0" allowfullscreen></iframe>
             </br>
             I also helped organise and chair sessions.
-                </br></br></br>
+                </br>
+          
+          <h4>Edge Hill Corpus Research Group - 14.12.2023</h4>
+              <p>
+                <span class="image left"><img src="images/fulls/EHRG2023.jpg" alt="Edge Hill talk 2023" /></span>
+                </br>
+                Daniel Malone (Edge Hill) and I presented on 'A pack of lone wolves? Exploring the nexus between the lone-wolf terrorist, Al-Qaeda, and ISIS in the British Press' as part of the Edge Hill Corpus Research Group <i>Two approaches to collocation networks: GraphColl and LLN </i> (with Vaclav Brezina) and <i>Deconstructing Discourses – A network-based approach to analysing Lone Wolf Terrorism in British Newspapers</i>
+(see <a href="https://sites.edgehill.ac.uk/crg/past/" target="_blank">EHCRG website</a>)<br>
+            </br>
+            Abstract:
+            </br>   
+            Following recent events in Belgium and Israel, the lone-wolf terrorist re-emerged in media reportage, with President Joe Biden and former GCHQ Director Sir David Omand expressing concerns over potential attacks in the USA and UK. Days later, Belgian Prime Minister Alexander De Croo described the neutralised Brussels shooter as “probably a lone wolf,” thus aiming to downplay the risk of subsequent incidents. Together, these instances exemplify that by shaping a “reality” (Entman, 2004), (in)security discourses can amplify or downplay a terrorist threat, in turn reflecting and/or influencing public perception and potentially guiding policy responses.
+            Historically, the lone wolf has been associated with different movements, ranging from the propaganda of the deed in the 19th Century to the leaderless resistance of white-supremacist groups in the 1980s and 90s. More recently, it is within the domain of Islamist terrorism, often dominated by Al-Qaeda and ISIS, where the lone wolf has become increasingly associated, especially in the British press.
+            In this joint presentation, we discuss the analytical approaches and results from our analysis of discourses surrounding the lone-wolf terrorist, al Qaeda, and ISIS in three diachronic sub-corpora of the Lone Wolf Corpus (Malone, 2020), a compilation of British Press articles from 2000 to 2019. In a unique methodological combination, we employed large-scale collocation networks and topical clustering to examine shifting discourses through collocational clusters, and applied a corpus-based critical discourse analysis to examine representations of the Al-Qaeda-ISIS nexus.
+            Hanna introduces the methodology employed to generate topical clusters and discusses collocational changes and constants in emerging discourses surrounding the lone-wolf terrorist. The resulting patterns present a discursive shift from clusters related to causative factors (e.g., a mental health subcluster), towards the internationalisation and institutionalisation of lone-wolf terrorism, and finally to response management in the form of sentencing and punitive actions (e.g., a court proceedings/prison subcluster).
+            Reporting on his corpus-based critical discourse analysis, Daniel presents the emergent representations surrounding co-occurrences of the node AL QAEDA with ISIS. These discourses were categorised into four modes of representation of presented relationship-types: Convergence, Association, Dissociation, and Divergence. These modes contributed to surrounding (in)security discourses that at times equate, promote and/or relegate different entities in a continual reshuffling of the threat hierarchy; a process termed here enmity reimagining.
+            </br>
+            
+          </br></br>
 </section>
 <section id="six">
             <h2>Invited talks/ guest lectures </h2>
