--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@ The results show that topically similar clusters (here: clusters containing temp
           <h4>Edge Hill Corpus Research Group - 14.12.2023</h4>
               <p>
                 <span class="image left"><img src="images/fulls/EHRG2023.jpg" alt="Edge Hill talk 2023" /></span>
-                </br>
-                Daniel Malone (Edge Hill) and I presented on 'A pack of lone wolves? Exploring the nexus between the lone-wolf terrorist, Al-Qaeda, and ISIS in the British Press' as part of the Edge Hill Corpus Research Group <i>Two approaches to collocation networks: GraphColl and LLN </i> (with Vaclav Brezina) and <i>Deconstructing Discourses – A network-based approach to analysing Lone Wolf Terrorism in British Newspapers</i>
+                Daniel Malone (Edge Hill) and I presented on 'A pack of lone wolves? Exploring the nexus between the lone-wolf terrorist, Al-Qaeda, and ISIS in the British Press' as part of the Edge Hill Corpus Research Group </i>
 (see <a href="https://sites.edgehill.ac.uk/crg/past/" target="_blank">EHCRG website</a>)<br>
             </br>
             Abstract:
