--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ The results show that topically similar clusters (here: clusters containing temp
                   <ul>
                     <li>Corpus Linguistics and Collocation Networks - School of Foreign Languages at the University American College Skopje, North Macedonia</li>
                     <li>Research Management and Open Access via the OSF - COMPILE</li>
-                    <li>Lessons learnt from teaching Python - PyData Lancaster</li>
+                    <li>Lessons learnt from teaching Python - PyData Lancaster, see presentation <a href="https://hannaschmueck.github.io/docs/Compile_PyData.pdf">here</a></li>
                     <li>Mapping Meaning: Large Linguistic Networks in the Digital Humanities Landscape - DH Forum @ Lancaster University (upcoming)</li>
                     
                 
@@ -208,7 +208,7 @@ The results show that topically similar clusters (here: clusters containing temp
                     <li>Advanced Language Processing Winter School - ALPS, 17-22 January 2021 </li>
                     <li>Machine Learning for Humanists - N8 CIR June 2021</li>
                     <li>The International Corpus Linguistics Conference 2021 - 13-17 July 2021</li>
-                    <li>École thématique d’été « Annotations » - 30 May - 03 June 2022</li>
+                    <li>École thématique d'été « Annotations » - 30 May - 03 June 2022</li>
                     <li>The 43rd Annual Conference of the International Computer Archive for Modern and Medieval English  - Corpus Linguistics: A New Normal? 27-30 July 2022 </li>
                     <li>CHIMED-3, 3rd International Conference on Historical Medical Discourse - London - 11-12 May 2023</li>   
                     <li>CL2023, 12th International Corpus Linguistics Conference - Lancaster - 03-06 July 2023</li>   
