--- a/index.html
+++ b/index.html
@@ -317,22 +317,23 @@
                     structure, and aboutness (Pecina, 2010; Xiao & McEnery, 2006; Brezina, 2016; Baker, 2016; Brezina et
                     al., 2015) of the respective registers in the BNC2014. MCODE clustering (Bader & Hogue, 2003) is
                     employed in order to identify the collocationally most closely-interconnected clusters unique to
-                    each register. Employing this methodology serves two purposes: Firstly, it allows for a systematic
+                    each register. 
+                    <span class="image left"> <img src="images/fulls/ICAME45_Fig1.png"
+                      alt="ICAME presentations 2024"/></span>
+                      Employing this methodology serves two purposes: Firstly, it allows for a systematic
                     and fully interpretable exploration of large-scale differences in collocational tendencies among
                     different registers of modern British English, and, secondly, it showcases which new avenues for
                     interpretation a novel approach to collocation visualisation can bring. On a broader scale, notable
                     collocational convergence is observed, with the highest overlap occurring between Magazines and News
                     (20.2%), Spoken and Written-to-be-Spoken (19.9%), and E-Language and Spoken (19.6%). Conversely, the
                     lowest overlap is evident between Official Documents and Written-to-be-Spoken (2.0%), Academic
-                    Language and Written-to-be-Spoken (2.3%), and Fiction and Official Documents (3.2%). Figures 1 and 2
+                    Language and Written-to-be-Spoken (2.3%), and Fiction and Official Documents (3.2%). 
+                    <span class="image right"> <img
+                      src="images/fulls/ICAME45_Fig2.png" alt="ICAME presentations 2024" /></span> Figures 1 and 2
                     show key clusters from the opposing domains of Official Documents and Written-To-Be-Spoken
                     respectively. This novel multidisciplinary approach integrating corpus linguistics and graph theory
                     with MCODE clustering presents a new way for systematically exploring register variation. </br>
-                    <span class="image fit"> <img src="images/fulls/ICAME45_Fig1.png"
-                            alt="ICAME presentations 2024" /></span> Figure 1: Subcluster containing collocates
-                    unique to Official Documents in the BNC2014. </br></br><span class="image fit"> <img
-                            src="images/fulls/ICAME45_Fig2.png" alt="ICAME presentations 2024" /></span> Figure 2:
-                    Subcluster containing collocates unique to Written-To-Be-Spoken in the BNC2014. </br> </p>
+                    <span style="font-size:0.7em">Figure 1: Subcluster containing collocates unique to Official Documents in the BNC2014. </br> Figure 2: Subcluster containing collocates unique to Written-To-Be-Spoken in the BNC2014. </br></span></p>
             </section>
             <section id="six">
                 <h2>Invited talks/ guest lectures </h2>
