--- a/nexvision.html
+++ b/nexvision.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>NexVision Overview</title>
+    <title>Network Views</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.7, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -26,35 +26,34 @@
 
     <!-- Main -->
       <div id="main">
+ <!-- Introduction -->
+ <section id="one">
+  <header class="major">
+    <h2>NexVision Project - Data Visualisation
+   </h2>
+   <p> This page contains visualisations for the NexVision multimodal corpus project. 
+    </p>
+ </header>
 
-        <!-- Introduction -->
-          <section id="one">
-            <header class="major">
-              <h2>NexVision Project - Data Visualisation
-             </h2>
-             <p> This page contains visualisations for the NexVision multimodal corpus project. 
-              </p>
-           </header>
+ <header class="major">
+  <h2>
+    First evaluation, random sample of 100 Images and Tags (25 each from the Sun, Mirror, Telegraph, and Independent)
+ </h2>
+</header>
+<a href="https://hannaschmueck.github.io/Nexvision/Nexvision_Analysis.html">Violin plots resulting from the first round of manual evaluation</a>
+</br></br>
 
-           <header class="major">
-            <h2>
-              First evaluation, random sample of 100 Images and Tags (25 each from the Sun, Mirror, Telegraph, and Independent)
-           </h2>
-         </header>
-         <a href="https://hannaschmueck.github.io/Nexvision/Nexvision_Analysis.html">Violin plots resulting from the first round of manual evaluation</a>
-        </br></br>
-
-            <header class="major">
-               <h2>Timeseries visualisations of number of images, number of tags, and number of words per day in the sampling timeframe
-              </h2>
-            </header>
-            <p>
-              <li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_imgid_per_date_per_newspaper_timeline.html">Number of Images per Newspaper per Day</a></li>
-              <li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_numberoftags_per_date_per_newspaper_timeline.html">Number of Tags per Newspaper per Day</a></li>
-              <li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_wordcount_per_date_per_newspaper_timeline.html">Number of Words per Newspaper per Day</a></li>
-            </p>
-            
-          </section>
+  <header class="major">
+     <h2>Timeseries visualisations of number of images, number of tags, and number of words per day in the sampling timeframe
+    </h2>
+  </header>
+  <p>
+    <li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_imgid_per_date_per_newspaper_timeline.html">Number of Images per Newspaper per Day</a></li>
+    <li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_numberoftags_per_date_per_newspaper_timeline.html">Number of Tags per Newspaper per Day</a></li>
+    <li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_wordcount_per_date_per_newspaper_timeline.html">Number of Words per Newspaper per Day</a></li>
+  </p>
+  
+</section>
 
          
     <!-- Footer -->
