--- a/nexvision.html
+++ b/nexvision.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Network Views</title>
+    <title>NexVision Navigation</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.7, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
