--- a/Nexvision/NexVision_Freq_After_Filter.html
+++ b/Nexvision/NexVision_Freq_After_Filter.html
@@ -18,7 +18,7 @@
       p {text-align: center;}
       div {text-align: center;}
    </style>
-<body class="is-preload"><h1>Diagram showing frequency per tag of the whole corpus after filtering</h1>
+<body class="is-preload"><h1>Plot showing frequency per tag of the whole corpus after filtering</h1>
 <p>This plot is interactive - it is possible to zoom in and see the labels and frequencies of the individual tags.</p>
 
 <div id='divPlotly_1''></div>
