--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
                     target="_blank">(LANA) </a> project in collaboration with colleagues at ASU. </li>
             <li><b>Research Assistant Roles - Multimodal Corpora using CloudVision</b> <br /> <br />I currently work on
                 a multimodal newspaper corpus compilation project with Professor Paul Baker. My role entails writing
-                custum Python scripts for collecting the corpus data from several UK newspaper websites, downloading and
-                processing the images, interfacrting with Google CloudVision and Vertex AI for image tagging, and
-                designing the multimodal corpus. </li>
+                custom Python scripts for collecting the corpus data from several UK newspaper websites, downloading and
+                processing the images, interfacing with Google CloudVision and Vertex AI for image tagging, and
+                designing the multimodal corpus. Alongside this, this project entails an extensive manual evaluation of using 
+                Vertex AI for mutimodal corpus analysis. I have further developed a small tool to display the images based on 
+                their tags to enable effective multimodal analyses.</li>
             <li><b>Technical Assistant Roles - ECR Events</b> <br /> <br />I did the recording and communication for the
                 <a href="https://www.eventbrite.co.uk/e/quantitative-research-methods-for-social-sciences-tickets-308863648487"
                     target="_blank">Quantitative Research Methods for Social Sciences</a> for early career researchers
