Nexivision update/ tags per image

--- a/nexvision.html
+++ b/nexvision.html
@@ -54,10 +54,18 @@
 
   <h2>
     Manual Evaluation of the 133 most frequent tags across the entire NexVision corpus.
-
  </h2>
-</header>
 <a href="https://hannaschmueck.github.io/Nexvision/Nexvision_Full_Eval.html">Heatmaps showing the full overview of Vision AI confidence scores, the first manual rating, and the differnce between these.</a>
+</br></br>
+<h2>
+  Visualisation showing number of tags per image per newspaper.
+</h2>
+
+
+</header>
+<a href="https://hannaschmueck.github.io/Nexvision_tags_per_image_per_newspaper.html">Heatmaps showing the full overview of Vision AI confidence scores, the first manual rating, and the differnce between these.</a>
+
+
 
 </section>
 
