publications updated and general sections cleaned up.

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                       href="https://hannaschmueck.github.io/docs/DHForum2024.pdf">here</a> and visualisations here <a
                       href="https://hannaschmueck.github.io/Networks/spokenBNC2014clusters.html">Spoken BNC</a> & <a
                       href="https://hannaschmueck.github.io/Networks/academicBNC2014clusters.html">Academic BNC</a>.</p>
-                <h4>ICAME 45 - UPCOMING, Vigo, Spain</h4>
+                <h4>ICAME 45 - 18.06.- 22.06.2024, Vigo, Spain</h4>
                 <p> <span class="image left"><img src="images/fulls/ICAME45.jpg"
                             alt="ICAME presentations 2024" /></span> I have had two full papers accepted for ICAME 45 in
                     Vigo. The first paper is a collaboration with Samuel Hollands (Sheffield University) titled
@@ -364,14 +364,15 @@
                     <li>CHIMED-3, 3rd International Conference on Historical Medical Discourse - London - 11-12 May 2023
                     </li>
                     <li>CL2023, 12th International Corpus Linguistics Conference - Lancaster - 03-06 July 2023</li>
+                    <li>The 45rd Annual Conference of the International Computer Archive for Modern and Medieval English
+                      - Corpus Linguistics: Interlocking Corpora and Register(s): Diversity and Innovation. 28-22 June 2024</li>
                 </ul>
-                <h2>Just for fun - some data visualisation (selection) </h2> </br> <iframe width="100%" height="702"
+                <h2>Just for fun - data visualisation of attended events (in-person and online during COVID) </h2> </br> <iframe width="100%" height="702"
                     frameborder="0" src="https://observablehq.com/embed/1a1a224a2f37dd4f?cells=chart%2Ckey"></iframe>
             </section>
             <section id="seven">
-                <h2>Random bits </h2>
-                <p> I also really enjoy crafting, painting, playing games (particularly platformers and dungeon
-                    crawlers), throwing some darts, and listening to podcasts. </br>I won a <a
+                <h2>Interests </h2>
+                <p> When I'm not working I really enjoy crafting, painting, playing (video)games (particularly platformers), exploring the Lake District, throwing some darts, and listening to podcasts. </br>I won a <a
                         href=" https://portal.lancaster.ac.uk/portal/news/article/big-bike-conversation-2022-competition-winner">Green
                         Lancaster competition </a>and since also enjoy cycling in and around Lancaster.
                 <p>
