--- a/index.html
+++ b/index.html
@@ -14,54 +14,6 @@
 </head>
 
 
-
-<style>
-  .collapsible {
-    background-color: #e2dde4;
-    color: inherit;
-    cursor: pointer;
-    padding: 10px;
-    width: 100%;
-    border: none;
-    text-align: center;
-    outline: none;
-    font-size: 15px;
-    font-family: inherit;
-    border-radius: 5px;
-  }
-  
-  .active, .collapsible:hover {
-    background-color: #786f62;
-    color: #f1f1f1;
-  }
-  
-  .content {
-    padding: 0 18px;
-    max-height: 0;
-    overflow: auto;
-    transition: max-height 0.2s ease-out;
-    background-color: #f1f1f1;
-    font-family: inherit;
-    border-radius: 5px;
-  }
-
-  .center-container {
-        text-align: center;
-    }
-
-    hr.rounded {
-      border: 3px solid #786f629d;
-      border-radius: 7px 7px 7px 7px;
-}
-
-.rounded-box {
-    background-color: #e2dde494; 
-    border-radius: 5px; 
-    padding: 2px 2px 2px 2px;
-    font-family: inherit;
-}
-  </style>
-
 <body class="is-preload">
     <!-- Header -->
     <header id="header">
@@ -962,22 +914,7 @@
             </ul>
         </div>
     </footer> <!-- Scripts -->
-    <script>
-      var coll = document.getElementsByClassName("collapsible");
-      var i;
-      
-      for (i = 0; i < coll.length; i++) {
-        coll[i].addEventListener("click", function() {
-          this.classList.toggle("active");
-          var content = this.nextElementSibling;
-          if (content.style.maxHeight){
-            content.style.maxHeight = null;
-          } else {
-            content.style.maxHeight = content.scrollHeight + "px";
-          } 
-        });
-      }
-      </script>
+    <script src="assets/js/collapse.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.poptrox.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
