--- a/nexvision.html
+++ b/nexvision.html
@@ -84,7 +84,8 @@
         </div>
       </footer>
 
-    <!-- Scripts -->
+    <!-- Scripts -->]
+     <script src="assets/js/collapse.js"></script>
       <script src="assets/js/jquery.min.js"></script>
       <script src="assets/js/jquery.poptrox.min.js"></script>
       <script src="assets/js/browser.min.js"></script>
