--- a/publications.html
+++ b/publications.html
@@ -53,10 +53,10 @@
           </br><h2>Books</h2>
           <div class="apa">Baker, P., Schmück, H., & Qian, Y. (2025). Automatic Image Tagging for Corpus Linguistics. Cambridge: Cambridge University Press. [accepted] </div>
 
-          <h2>Reviewing</h2>
-          <p>I have acted as a reviewer for:</p>
-          <div class="apa"><a href="https://www.euppublishing.com/loi/cor?widget=aboutthisjournal#de6dc34d-c714-4ed7-8457-32996500e695-58132d06-cf2f-4e31-a696-f4f2aa0cdd9a">Corpora (EUP)</a></div>
-  
+        </br><h2>Reviewing</h2>
+          <p>I have acted as a reviewer for:
+          <li><a href="https://www.euppublishing.com/loi/cor?widget=aboutthisjournal#de6dc34d-c714-4ed7-8457-32996500e695-58132d06-cf2f-4e31-a696-f4f2aa0cdd9a">Corpora (EUP)</a></li>
+        </p>
         </section>
 
          
