--- a/index.html
+++ b/index.html
@@ -480,7 +480,9 @@
                     <li>Lessons learnt from teaching Python - PyData Lancaster, see presentation <a
                             href="https://hannaschmueck.github.io/docs/Compile_PyData.pdf">here</a></li>
                     <li>Mapping Meaning: Large Linguistic Networks in the Digital Humanities Landscape - DH Forum @
-                        Lancaster University (upcoming)</li>
+                        Lancaster University</li>
+                    <li>Large Linguistic Networks: A case study on Lone-Wolf Terrorism in the British Press
+                      - University of Glasgow (upcoming)</li>
             </section>
             <section id="seven">
               <hr class="rounded">
@@ -501,6 +503,8 @@
                     <li>CL2023, 12th International Corpus Linguistics Conference - Lancaster - 03-06 July 2023</li>
                     <li>The 45rd Annual Conference of the International Computer Archive for Modern and Medieval English
                       - Corpus Linguistics: Interlocking Corpora and Register(s): Diversity and Innovation. 28-22 June 2024</li>
+                      <li>UCREL NLP Summer School 2024 - 24-26 July 2024</li>
+
                 </ul>
                 <hr class="rounded">
                 <h2>Data visualisation of attended events (in-person and online during COVID) </h2> </br> <iframe width="100%" height="702"
