autumn school and new courses added

--- a/index.html
+++ b/index.html
@@ -48,16 +48,12 @@
               I have been teaching several modules at <a
                     href="https://www.lancaster.ac.uk/linguistics/about/people/hanna-schmueck" target="_blank">Lancaster
                     University</a> since 2020. Modules I have taught so far include LING228 (Child Language
-                Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics). </li>
+                Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics). I am currently teaching LING330 (Language, Cognition and Culture), LING324 (Cognitive Linguistics), and LING316 (Psycholinguistics). </li>
             <li><div class="rounded-box">
               <b>Teaching - MOOC</b>
           </div> 
-          I have been deputy lead / lead mentor for Lancaster's <a
-                    href="https://www.futurelearn.com/courses/corpus-linguistics" target="_blank">"Corpus Linguistics -
-                    Method, Analysis, Interpretation"</a> online course for multiple years now. This course runs yearly,
-                has multiple thousands of participants (at the time of writing a cumulative count of over 70,000) and I
-                have been involved since 2020. </li> <span class="image right"><img src="images/fulls/MOOC.jpg"
-                    alt="" /></span>
+          I have been deputy lead / lead mentor for Lancaster's <a href="https://www.futurelearn.com/courses/corpus-linguistics" target="_blank">"Corpus Linguistics - Method, Analysis, Interpretation"</a> online course for multiple years now. This course runs yearly, has multiple thousands of participants (at the time of writing a cumulative count of over 70,000) and I have been involved since 2020. <span class="image right"><img src="images/fulls/MOOC.jpg"alt="" /></span> </li> 
+          <div class="rounded-box"><b>Teaching - Autumn School in Corpus Linguistics</b></div> I am currently teaching a 13 week autumn school for academics hoping to further their corpus linguistic skills and professional development at Lancaster University.
             <li><div class="rounded-box"><b>Mentoring - Methods North West</b></div> I was working as a mentor for research students as
                 part of a <a href="https://twitter.com/MethodsNW/status/1569264899808972800" target="_blank">Methods NW
                     project</a> enabling interdisciplinary and interinstitutional research collaborations. My role
