nexvision overview fixed

--- a/nexvision.html
+++ b/nexvision.html
@@ -34,36 +34,48 @@
    <p> This page contains visualisations for the NexVision multimodal corpus project. 
     </p>
 
-
-
   <h2>
-    First evaluation, random sample of 100 Images and Tags (25 each from the Sun, Mirror, Telegraph, and Independent)
+    1 - First Small-Scale Evaluation
  </h2>
-
+  <h3>
+    First evaluation, random sample of 100 Images and Tags (25 each from the Sun, Mirror, Telegraph, and Independent)
+ </h3>
 <a href="https://hannaschmueck.github.io/Nexvision/Nexvision_Analysis.html">Violin plots resulting from the first round of manual evaluation</a>
 </br></br>
-
-
-     <h2>Timeseries visualisations of number of images, number of tags, and number of words per day in the sampling timeframe
-    </h2>
-  <p>
-    <li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_imgid_per_date_per_newspaper_timeline.html">Number of Images per Newspaper per Day</a></li>
-    <li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_numberoftags_per_date_per_newspaper_timeline.html">Number of Tags per Newspaper per Day</a></li>
-    <li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_wordcount_per_date_per_newspaper_timeline.html">Number of Words per Newspaper per Day</a></li>
-  </p>
-
-  <h2>
-    Manual Evaluation of the 133 most frequent tags across the entire NexVision corpus.
- </h2>
-<a href="https://hannaschmueck.github.io/Nexvision/Nexvision_Full_Eval.html">Heatmaps showing the full overview of Vision AI confidence scores, the first manual rating, and the differnce between these.</a>
-</br></br>
 <h2>
-  Visualisation showing number of tags per image per newspaper.
+  2 - Evaluation of all frequent tags
+</h2>
+<h3>
+  Manual Evaluation of the 133 most frequent tags across the entire NexVision corpus.
+</h3>
+<a href="https://hannaschmueck.github.io/Nexvision/NexVision_Full_Evaluation.html">Heatmaps showing the full overview of Vision AI confidence scores, the first manual rating, and the differnce between these.</a>
+
+<a href="https://hannaschmueck.github.io/Nexvision/NexVision_Cutoffs.html">Matrices and barcharts showing different cutoff scenarios.</a>
+
+
+</br></br>
+
+<h2>
+  3 - Resulting Corpus Statistics
 </h2>
 
-
-</header>
-<a href="https://hannaschmueck.github.io/Nexvision/Nexvision_tags_per_image_per_newspaper.html">Heatmaps showing the full overview of Vision AI confidence scores, the first manual rating, and the differnce between these.</a>
+<h3>Timeseries visualisations of number of images, number of tags, and number of words per day in the sampling timeframe
+</h3>
+<p>
+<li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_imgid_per_date_per_newspaper_timeline.html">Number of Images per Newspaper per Day</a></li>
+<li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_numberoftags_per_date_per_newspaper_timeline.html">Number of Tags per Newspaper per Day</a></li>
+<li><a href="https://hannaschmueck.github.io/Nexvision/Nexvision_wordcount_per_date_per_newspaper_timeline.html">Number of Words per Newspaper per Day</a></li>
+</br>
+<a href="https://hannaschmueck.github.io/Nexvision/NexVision_Freq_After_Filter.html">Plot showing frequency per tag of the whole corpus after filtering.</a></br>
+<a href="https://hannaschmueck.github.io/Nexvision/Nexvision_tags_per_image_per_newspaper.html">Boxplots showing number of tags per image per newspaper</a>
+</p>
+<h2>
+  4 - Sentiment Analysis
+</h2>
+<h3>
+  Visualisation showing sentiment per sentence for each of the newspapers.
+</h3>
+<a href="https://hannaschmueck.github.io/Nexvision/NexVision_Sentiment_per_sentence.html">Stacked bar chart showing sentiment per sentence per subcorpus. Base code adapted from UCREL Summer School.</a>
 
 
 
@@ -84,7 +96,7 @@
         </div>
       </footer>
 
-    <!-- Scripts -->]
+    <!-- Scripts -->
      <script src="assets/js/collapse.js"></script>
       <script src="assets/js/jquery.min.js"></script>
       <script src="assets/js/jquery.poptrox.min.js"></script>
