removal of dreaded jsonl

--- a/OHOS/D3_network_large.html
+++ b/OHOS/D3_network_large.html
@@ -16,7 +16,7 @@
     loader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json', function (font) {
       const Graph = ForceGraph3D()
         (document.getElementById('3d-graph'))
-        .jsonUrl('../datasets/OHOS/D3_output_EVENT_ORG_PERSON_WORK_OF_ART_PRODUCT_anon.jsonl')
+        .jsonUrl('../datasets/OHOS/D3_output_EVENT_ORG_PERSON_WORK_OF_ART_PRODUCT_anon.json')
         .nodeAutoColorBy('type')
         
         .cooldownTicks(200)
