--- a/OHOS/D3_network_small.html
+++ b/OHOS/D3_network_small.html
@@ -16,7 +16,7 @@
     loader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json', function (font) {
       const Graph = ForceGraph3D()
         (document.getElementById('3d-graph'))
-        .jsonUrl('../datasets/OHOS/D3_output_PERSON_ORG_EVENT_anon.jsonl')
+        .jsonUrl('../datasets/OHOS/D3_output_PERSON_ORG_EVENT_anon.json')
         .nodeAutoColorBy('type')
         
         .cooldownTicks(200)
