dynamic removal done

--- a/OHOS.html
+++ b/OHOS.html
@@ -63,6 +63,15 @@
 </br></br>
 
 
+<h2>
+  Sample network (Dataset 1)
+</h2>
+<h3>
+  Contains partially randomised and fully anonymised data showing events, organisations, people, works of art, geopolitical entities, and products from Dataset 1. When clickin on a node, it shows what would happen if the community generated links were to disappear.
+</h3>
+<a href="https://hannaschmueck.github.io/OHOS/D1_network_dynamic.html">3D Network visualisation</a>
+</br></br>
+
 
 
 </section>
