--- a/OHOS/Morrab_full.html
+++ b/OHOS/Morrab_full.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Force Graph</title>
+  <title>Morrab Archive Graph - dynamic</title>
   <style> body { margin: 0; } 
 #ohos-logo {
   position: absolute;
@@ -29,6 +29,7 @@
   font-size: 12px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: white;
+  text-align: center;
 }
 
   </style>
@@ -45,14 +46,16 @@
 <a href="https://morrablibrary.org.uk/" target="_blank" style="pointer-events: auto;">
     <img id="morrab-logo" src="../datasets/OHOS/logo/morrab.png" width="70" height="70">
   </a>
-<div id="overlay">This network shows the links between all events, organisations, people, works of art, and products that are connected via shared mentions and relations to items in the Morrab Archive. </div>
+<div id="overlay">This network shows the links between all events, organisations, people, works of art, 
+  and products that are connected via shared mentions and relations to items in the Morrab Archive. 
+  Right clicking on an entry opens the associated wikidata link if available.</div>
   <script>
 
     const loader = new THREE.FontLoader();
     loader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json', function (font) {
       const Graph = ForceGraph3D()
         (document.getElementById('3d-graph'))
-        .jsonUrl('../datasets/OHOS/MORRAB_EVENT_ORG_PERSON_WORK_OF_ART_PRODUCT.jsonl')
+        .jsonUrl('../datasets/OHOS/MORRAB_ORG_EVENT_WORK_OF_ART_PERSON_PRODUCT.json')
         .showNavInfo(0)
         .cooldownTicks(400)
         .linkWidth(.5)
@@ -80,10 +83,8 @@
             });
             const textMaterial = new THREE.MeshBasicMaterial({ color: 'lightgrey' });
             const textMesh = new THREE.Mesh(textGeometry, textMaterial);
-            textMesh.position.set(10, 10, 0); // Adjust as needed
+            textMesh.position.set(10, 10, 0);
             group.add(textMesh);
-
-            
           }
 
           return group;
