--- a/OHOS/D1_network.html
+++ b/OHOS/D1_network.html
@@ -3,47 +3,96 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Force Graph</title>
-  <style> body { margin: 0; } </style>
+  <title>Archive 1 Network</title>
+  <style> body { margin: 0; } 
+#ohos-logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.5;
+  z-index: 1;
+}
+
+#morrab-logo {
+  position: absolute;
+  top: 75px;
+  left: 0;
+  opacity: 0.5;
+  z-index: 1;
+}
+#overlay {
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0.5;
+  font-size: 12px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: white;
+  text-align: center;
+}
+
+  </style>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <script src="//unpkg.com/3d-force-graph"></script>
 </head>
 <body>
+  
   <div id="3d-graph"></div>
+  <a href="https://ohos.ac.uk" target="_blank" style="pointer-events: auto;">
+  <img id="ohos-logo" src="../datasets/OHOS/logo/OHOS.png" width="70" height="70">
+</a>
+<a href="https://morrablibrary.org.uk/" target="_blank" style="pointer-events: auto;">
+    <img id="morrab-logo" src="../datasets/OHOS/logo/morrab.png" width="70" height="70">
+  </a>
+<div id="overlay">Contains partially randomised and fully anonymised data showing events, organisations, people, works of art, geopolitical entities, and products from Dataset 1. </div>
   <script>
 
     const loader = new THREE.FontLoader();
     loader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json', function (font) {
       const Graph = ForceGraph3D()
         (document.getElementById('3d-graph'))
-        .jsonUrl('../datasets/OHOS/D1_output_PRODUCT_GPE_WORK_OF_ART_EVENT_ORG_LOC_PERSON_anon.json')
-        .nodeAutoColorBy('type')
-        
-        .cooldownTicks(200)
+        .jsonUrl('..datasets/OHOS/SURREY_LOC_WORK_OF_ART_PERSON_GPE_PRODUCT_EVENT_ORG_anon.json')
+        .showNavInfo(0)
+        .cooldownTicks(400)
+        .linkWidth(.5)
+        .linkOpacity(.1)
+        .onNodeRightClick((node, event) => {
+           if (node.wikilink !== 'nan') {
+             window.open(node.wikilink, '_blank');
+           }})
         .nodeThreeObject(node => {
           const group = new THREE.Group();
-
           const sphereGeometry = new THREE.SphereGeometry(5);
-          const sphereMaterial = new THREE.MeshBasicMaterial({ color: node.color });
+          const sphereMaterial = new THREE.MeshBasicMaterial({ color: 
+            node.type === 'PERSON' ? 0x494D88  :
+            node.type === 'EVENT' ? 0xFA8334  : 
+            node.type === 'ORG' ? 0x067584  :
+            node.type === 'GPE' ? 0xF1D143  :
+            node.type === 'LOC' ? 0xF1D143  :
+            node.type === 'PRODUCT' ? 0xCBC8D2  :
+            node.type === 'WORK_OF_ART' ? 0x857F92  :
+            0xffffff });
           const sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
           group.add(sphere);
 
-          if (node.frequency>5) { // Render labels only for the first 10 nodes
-            const textGeometry = new THREE.TextGeometry(node.id, {
+          if (node.frequency>3) {
+            const textGeometry = new THREE.TextGeometry(node.name, {
               font: font,
               size: 5,
               height: 1
             });
             const textMaterial = new THREE.MeshBasicMaterial({ color: 'lightgrey' });
             const textMesh = new THREE.Mesh(textGeometry, textMaterial);
-            textMesh.position.set(10, 10, 0); // Adjust as needed
+            textMesh.position.set(10, 10, 0);
             group.add(textMesh);
           }
 
           return group;
         });
-    });
 
+    });
 
   </script>
 </body>
