--- a/OHOS/Morrab_full.html
+++ b/OHOS/Morrab_full.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Morrab Archive Network - dynamic</title>
+  <title>Morrab Archive Network</title>
   <style> body { margin: 0; } 
 #ohos-logo {
   position: absolute;
