--- a/OHOS/WMK_anon.html
+++ b/OHOS/WMK_anon.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sharing Wycombe's Old Photographs Network</title>
+  <title>Biography of Women Who Made Milton Keynes Network</title>
   <style> body { margin: 0; } 
 #ohos-logo {
   position: absolute;
@@ -35,17 +35,16 @@
   <div id="3d-graph"></div>
   <a href="https://ohos.ac.uk" target="_blank" style="pointer-events: auto;">
   <img id="ohos-logo" src="../datasets/OHOS/logo/OHOS.png" width="70" height="70">
-</a>
-
-<div id="overlay">This network shows the links between all events, organisations, people,
-  and products that are connected via shared mentions and relations to items in the Sharing Wycombe's Old Photographs Archive.</div>
-  <script>
+  </a>
+  <div id="overlay">This network shows the links between all organisations, people, works of art, events, products, locations,
+    and locations that are connected via shared mentions and relations to items in the Biography of Women Who Made Milton Keynes Archive.</div>
+    <script>
 
     const loader = new THREE.FontLoader();
     loader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json', function (font) {
       const Graph = ForceGraph3D()
         (document.getElementById('3d-graph'))
-        .jsonUrl('../datasets/OHOS/SWOP_PERSON_LOC_ORG_subsample_anon.json')
+        .jsonUrl('../datasets/OHOS/WMK_GPE_PERSON_PRODUCT_LOC_WORK_OF_ART_EVENT_ORG_anon.json')
         .showNavInfo(0)
         .cooldownTicks(400)
         .linkWidth(.5)
@@ -65,7 +64,7 @@
           const sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
           group.add(sphere);
 
-          if (node.frequency>60) {
+          if (node.frequency>1) {
             const textGeometry = new THREE.TextGeometry(node.id, {
               font: font,
               size: 5,
