--- a/OHOS.html
+++ b/OHOS.html
@@ -35,41 +35,60 @@
     </p>
 
   <h2>
-    Sample network (Dataset 3)
+    Moloney NI Archive Network
  </h2>
-  <h3>
-    Contains partially randomised and fully anonymised data showing events, organisations, people, works of art, and products from Dataset 3.
- </h3>
-<a href="https://hannaschmueck.github.io/OHOS/D3_network_large.html">3D Network visualisation</a>
+<a href="https://hannaschmueck.github.io/OHOS/Moloney_anon.html">3D Network visualisation</a>
 </br></br>
 
 <h2>
-  Sample network (Dataset 3)
+  People's Collection Wales
 </h2>
-<h3>
-  Contains partially randomised and fully anonymised data showing just events, organisations, and people from Dataset 3.
-</h3>
-<a href="https://hannaschmueck.github.io/OHOS/D3_network_small.html">3D Network visualisation</a>
+<a href="https://hannaschmueck.github.io/OHOS/PCW_anon.html">3D Network visualisation</a>
+</br></br>
+
+<h2>
+  Sharing Wycombe's Old Photographs
+</h2>
+<a href="https://hannaschmueck.github.io/OHOS/SWOP_anon.html">3D Network visualisation</a>
+</br></br>
+
+<h2>
+  Surrey in the Great War Archive
+</h2>
+<a href="https://hannaschmueck.github.io/OHOS/Surrey_anon.html">3D Network visualisation</a>
+</br></br>
+
+<h2>
+  Sutton Index of Deaths Network
+</h2>
+<a href="https://hannaschmueck.github.io/OHOS/Sutton_anon.html">3D Network visualisation</a>
+</br></br>
+
+<h2>
+  Biography of Women Who Made Milton Keynes Network
+</h2>
+<a href="https://hannaschmueck.github.io/OHOS/WMK_anon.html">3D Network visualisation</a>
 </br></br>
 
 
 <h2>
-  Sample network (Dataset 1)
+  Morrab Archive - Large
 </h2>
-<h3>
-  Contains partially randomised and fully anonymised data showing events, organisations, people, works of art, geopolitical entities, and products from Dataset 1.
-</h3>
-<a href="https://hannaschmueck.github.io/OHOS/D1_network.html">3D Network visualisation</a>
+<a href="https://hannaschmueck.github.io/OHOS/Morrab_full.html">3D Network visualisation</a>
 </br></br>
 
 
 <h2>
-  Sample network (Dataset 1)
+  Morrab Archive - Small
 </h2>
-<h3>
-  Contains partially randomised and fully anonymised data showing events, organisations, people, works of art, geopolitical entities, and products from Dataset 1. When clickin on a node, it shows what would happen if the community generated links were to disappear.
-</h3>
-<a href="https://hannaschmueck.github.io/OHOS/D1_network_dynamic.html">3D Network visualisation</a>
+<a href="https://hannaschmueck.github.io/OHOS/Morrab_full.html">3D Network visualisation</a>
+</br></br>
+
+
+<h2>
+  Morrab Archive - Dynamic
+</h2>
+<a href="https://hannaschmueck.github.io/OHOS/Morrab_full_dynamic.html">3D Network visualisation</a>
 </br></br>
 
 
