--- a/OHOS/Morrab_full_dynamic.html
+++ b/OHOS/Morrab_full_dynamic.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="../datasets/OHOS/logo/OHOS.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Morrab Archive Network - dynamic</title>
