--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                     <li>Mapping Meaning: Large Linguistic Networks in the Digital Humanities Landscape - DH Forum @
                         Lancaster University</li>
                     <li>Large Linguistic Networks: A case study on Lone-Wolf Terrorism in the British Press
-                      - University of Glasgow (upcoming)</li>
+                      - University of Glasgow</li>
             </section>
             <section id="seven">
               <hr class="rounded">
@@ -500,6 +500,7 @@
                     <li>The 45rd Annual Conference of the International Computer Archive for Modern and Medieval English
                       - Corpus Linguistics: Interlocking Corpora and Register(s): Diversity and Innovation. 28-22 June 2024</li>
                       <li>UCREL NLP Summer School 2024 - 24-26 July 2024</li>
+                      <li>Towards a National Collection Conference - 20-21 November 2024</li>
 
                 </ul>
                 <hr class="rounded">
